--- a/style.css
+++ b/style.css
@@ -1,22 +1,20 @@
-body {
-    width:960px;
-    margin:auto;
-    padding: auto;
-}
+body,html {
+    text-align: center;
+  }
+
 #container {
-    margin-top: 20px;
-    width: 960px;
-    height: 960px;
-    border: 2px solid;
+    border: 5px solid;
+    width: 600px;
+    height: 600px;
+    margin:0 auto;
     display: grid;
     grid-template-rows: repeat(var(--rowNum), 1fr);
-    grid-template-columns: repeat(var(--colNum), 1fr);
+    grid-template-columns: repeat(var(--colNum), 1fr); 
 }
 
 #container > div {
     background-color: var(--divColor, aquamarine);
-    padding: 1em;
+    width: 100%;
+    height: 100%;
     /* border: 1px solid; */
 }
-
-  
