--- a/style.css
+++ b/style.css
@@ -1,20 +1,25 @@
+:root {
+    --bgcolor: #C6EED9;
+}
+
 body,html {
     text-align: center;
   }
 
 #container {
-    border: 5px solid;
+    border: 6px solid;
     width: 600px;
     height: 600px;
     margin:0 auto;
     display: grid;
     grid-template-rows: repeat(var(--rowNum), 1fr);
     grid-template-columns: repeat(var(--colNum), 1fr); 
+    background-color: var(--bgcolor);
 }
 
 #container > div {
-    background-color: var(--divColor, aquamarine);
+    background-color: var(--divColor, var(--bgcolor));
     width: 100%;
     height: 100%;
-    /* border: 1px solid; */
+    border: 1px solid;
 }
