--- a/style.css
+++ b/style.css
@@ -21,5 +21,24 @@ body,html {
     background-color: var(--divColor, var(--bgcolor));
     width: 100%;
     height: 100%;
-    border: 1px solid;
+    /* border: 1px solid; */
 }
+
+button {
+    border: none;
+    outline: none;
+    padding: 10px 16px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+
+.active, button:hover {
+    background-color: #666;
+    color: white;
+  }
+
+  input {
+    padding: 10px 16px;
+    font-size: 16px;
+  }
+
